<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodo_subtitle_string"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodo_value"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:textSize="32sp"
            android:id="@+id/tv_periodo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fluxo_caixa_subtitle"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_fluxo_caixa"
            android:textColor="@color/colorBlack"
            android:text="@string/fluxo_caixa_value"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_gravity="center|center_vertical"
            />

    </LinearLayout>

</LinearLayout>