<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.assulfisoft.oramentodecapital.fragment.OutrosFragment"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outros_title_textview"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_outros_title"/>

        <TextView
            android:id="@+id/tv_taxa_financiamento_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_outros_title"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/taxa_financiamento_textview"/>

        <TextView
            android:id="@+id/tv_taxa_reinvestimento_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_taxa_financiamento_text"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/taxa_reinvestimento_textview"/>

    </RelativeLayout>

</ScrollView>
