<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.assulfisoft.oramentodecapital.MainActivity"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Conteudo principal da tela -->
    <ScrollView
        android:background="@color/colorWhite"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tv_nome_projeto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/textColorBlue"
                android:text="@string/tv_nome_projeto"
                android:textAppearance="@android:style/TextAppearance.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/tv_rrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorBlack"
                android:text="@string/tv_rrate_start"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/tv_frate"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_frate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorBlack"
                android:text="@string/tv_frate_start"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/tv_tir"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/tv_vpl"
                android:textColor="@color/colorBlack"
                android:id="@+id/tv_vpl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nome_projeto"/>

            <TextView
                android:id="@+id/tv_tir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/tv_tir"
                android:textColor="@color/colorBlack"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_payback"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_payback"
                android:text="@string/tv_payback"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_vpl"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                />

            <!-- complete: alterar o style do botão -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:id="@+id/btn_calcular"
                android:text="@string/btn_calcular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_payback"
                app:layout_constraintBottom_toTopOf="@id/btn_calcular"
                >

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:id="@+id/lv_cashflow"
                    android:layout_centerInParent="true">
                </ListView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:id="@+id/ll_empty_view">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_empty_view"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>

            </RelativeLayout>

            <!-- complete: alterar o background do FAB -->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_money_white"
                android:layout_marginRight="32dp" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>

    <!-- gaveta de navegacao -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/colorPrimary"
        ></ListView>

</android.support.v4.widget.DrawerLayout>

